terraform/modules/security-group/main.tf
resource "aws_security_group" "alb"{


name="shopsphere-alb-sg"


vpc_id=var.vpc_id



ingress{


from_port=80

to_port=80

protocol="tcp"

cidr_blocks=["0.0.0.0/0"]

}



ingress{


from_port=443

to_port=443

protocol="tcp"

cidr_blocks=["0.0.0.0/0"]

}



egress{


from_port=0

to_port=0

protocol="-1"

cidr_blocks=["0.0.0.0/0"]

}


}

resource "aws_security_group" "backend"{


name="shopsphere-backend-sg"


vpc_id=var.vpc_id



ingress{


from_port=8080

to_port=8080

protocol="tcp"


security_groups=[

aws_security_group.alb.id

]


}



egress{


from_port=0

to_port=0

protocol="-1"

cidr_blocks=["0.0.0.0/0"]

}


}

resource "aws_security_group" "database"{


name="shopsphere-db-sg"


vpc_id=var.vpc_id



ingress{


from_port=3306

to_port=3306

protocol="tcp"


security_groups=[

aws_security_group.backend.id

]


}


}
